--- a/package.json
+++ b/package.json
@@ -26,10 +26,11 @@
     "node": ">= 0.10.0"
   },
   "devDependencies": {
+    "grunt": "^1.0.1",
     "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-uglify": "~0.2.0",
     "grunt-contrib-jshint": "~0.6.0",
     "grunt-contrib-nodeunit": "~0.2.0",
+    "grunt-contrib-uglify": "~0.2.0",
     "grunt-contrib-watch": "~0.4.0"
   },
   "keywords": []
